# audio_output_switcher

./: .gitignore  Cargo.toml  README.md  devices.json  flake.nix  meson.build  shell.nix
src/: audio_server_utils.rs  command_line.rs  common.rs  lib.rs  main.rs
