[package]
name = "audio_output_switcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
exitcode = "1.1.2"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
which = "4.4.0"
